[package]
name = "qr-haggis"
version = "0.1.0"
authors = ["Albert Ford <albert@albertford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.2"
bincode = "1.3"
quircs = "0.10"
qrcode = "0.12"
image = "0.23"
num-bigint = "0.3"
