[package]
name = "qr-haggis"
version = "0.1.0"
authors = ["Albert Ford <albert@albertford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.2"
bincode = "1.3"
quircs = "0.10"
qrcode = "0.12"
image = "0.23"
num-bigint = "0.3"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
