[package]
name = "qr-haggis"
version = "0.1.0"
authors = ["Albert Ford <albert@albertford.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
# The version of wasm-opt in wasm-pack is outdated, so we use it manually
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quircs = "0.10"
qrcode = "0.12"
num-bigint = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
